# MCM-ICM-Agent

./: .env.example  .gitignore  CLAUDE_HANDOFF.md  README.md  README.zh-CN.md  WIRE_PROTOCOL.md  design.md  install.sh  mcm_agent_config.example.json  pyproject.toml
corpus_kb/: manifest.json
docs/: 00-overview.md  01-cli-product-design.md  02-workspace-design.md  03-agent-workflow-design.md  04-provider-design.md  05-rag-design.md  06-paper-generation-design.md  07-review-and-revision-design.md  AGENT_TOPOLOGY.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  WORKFLOW.md
scripts/: calibrate_judge.py  gen_protocol_doc.py  real_smoke.py  run_cli_smoke.py  run_demo_task.py  score_paper.py  smoke_providers.py
tests/: conftest.py  test_abstract_coherence.py  test_api_command.py  test_api_console.py  test_api_marks_configured.py  test_at_injection.py  test_chat.py  test_chat_stream.py  test_claim_planning.py  test_cli_config.py  test_cli_e2e.py  test_cli_interactive.py  test_cli_tui_smoke.py  test_code_interpreter.py  test_code_interpreter_jupyter_integration.py  test_compliance_resilience.py  test_config_json.py  test_config_merge.py  test_config_writer.py  test_coordinator.py  test_core_models.py  test_data_feasibility.py  test_data_lineage.py  test_demo_report.py  test_dialogue_chat.py  test_dialogue_guard.py  test_discussion_data_loop.py  test_docs.py  test_embedding_cache.py  test_embedding_providers.py  test_embedding_smoke.py  test_event_bus.py  test_example_demo_task.py  test_experiment_runner.py  test_experiment_spec.py  test_figure_embedding.py  (+102 more)
(+1158 files in other folders)
