[project]
name = "mcm-agent"
version = "0.1.0"
description = "MCM/ICM math modeling agent MVP"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "tenacity>=8.5.0",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "openpyxl>=3.1.5",
  "matplotlib>=3.9.1",
  "seaborn>=0.13.2",
  "scipy>=1.14.0",
  "scikit-learn>=1.5.1",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "python-multipart>=0.0.9",
  "chromadb>=0.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "freezegun>=1.5.1",
  "ruff>=0.5.7"
]
geo = [
  "geopandas>=1.0.1",
  "cartopy>=0.23.0"
]

[project.scripts]
mcm-agent = "mcm_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
